--- a/index.html
+++ b/index.html
@@ -1,2 +1,11 @@
 <!DOCTYPE html>
 <!-- your HTML in this file -->
+<html>
+  <head>
+    <title></title>
+  </head>
+  
+  <body></body>
+  
+  
+</html>
